force-app/main/default/objects/ecard_serial_number_xref__x/ecard_serial_number_xref__x.object-meta.xml
<CustomObject>
    <description>dw_view_ecard$serial_number_xref</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>dw_view_ecard$serial_number_xref</externalName>
    <label>ecard_serial_number_xref</label>
    <pluralLabel>ecard_serial_number_xref</pluralLabel>
</CustomObject>