force-app/main/default/objects/ecard_serial_number_xref__x/fields/bus_id__c.field-meta.xml
<CustomField>
    <fullName>bus_id__c</fullName>
    <description>bus_id</description>
    <externalDeveloperName>bus_id</externalDeveloperName>
    <label>bus_id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>