force-app/main/default/objects/ecard_serial_number_xref__x/fields/model_no__c.field-meta.xml
<CustomField>
    <fullName>model_no__c</fullName>
    <description>model_no</description>
    <externalDeveloperName>model_no</externalDeveloperName>
    <label>model_no</label>
    <length>50</length>
    <type>Text</type>
</CustomField>