force-app/main/default/objects/ecard_serial_number_xref__x/fields/serial_number_category__c.field-meta.xml
<CustomField>
    <fullName>serial_number_category__c</fullName>
    <description>serial_number_category</description>
    <externalDeveloperName>serial_number_category</externalDeveloperName>
    <label>serial_number_category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>