force-app/main/default/objects/ecard_serial_number_xref__x/fields/serial_number_item_desc__c.field-meta.xml
<CustomField>
    <fullName>serial_number_item_desc__c</fullName>
    <description>serial_number_item_desc</description>
    <externalDeveloperName>serial_number_item_desc</externalDeveloperName>
    <label>serial_number_item_desc</label>
    <length>40</length>
    <type>Text</type>
</CustomField>